indent fix found

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -86,7 +86,7 @@ nav ul li a:hover {
   margin: auto;
   width: 49%; }
 
-/******* HERO ROW ********/
+/******** HERO ROW *********/
 .hero--row {
   position: relative;
   padding: 340px 20px;
